--- a/website_project/templates/base.html
+++ b/website_project/templates/base.html
@@ -7,6 +7,11 @@
 
     <title>Website-Project</title>
 
+    <style>
+        {% block style %}
+        {% endblock %}
+    </style>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
@@ -19,8 +24,8 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Add activity</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="{{ url_for('activity_form') }}" class="nav-link" aria-current="page">Add activity</a></li>
+                <li class="nav-item"><a href="{{ url_for('home_page') }}" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             </ul>
         </header>
