fix footer position to very bottom or at text length

--- a/website_project/templates/activity_form.html
+++ b/website_project/templates/activity_form.html
@@ -43,18 +43,18 @@
                         </div>
                         <div class="mb-3">
                             <label for="swimming_distance" class="form-label">Distance [km]</label>
-                            <input id="swimming_distance" type="number" class="form-control" name="swimming_distance" min="0" max="1000" step="0.1" value="0" required>
+                            <input id="swimming_distance" type="number" class="form-control" name="swimming_distance" min="0" max="1000" step="0.1" placeholder="0" required>
                         </div>
                         <div class="mb-3">
                             <label for="swimming_time_total" class="form-label" aria-describedby="swimming_time_total_converted">Time Total [min]</label>
                             <div class="input-group">
-                                <input id="swimming_time_total" type="number" class="form-control" name="running_time_total" min="0" max="1000" step="1" value="0" required>
+                                <input id="swimming_time_total" type="number" class="form-control" name="running_time_total" min="0" max="1000" step="1" placeholder="0" required>
                                 <span class="input-group-text" id="swimming_time_total_converted">0:00</span>
                             </div>
                         </div>
                         <div class="mb-3">
                             <label for="swimming_description" class="form-label">Description (optional)</label>
-                            <input id="swimming_description" type="text" class="form-control" name="swimming_description">
+                            <input id="swimming_description" type="text" class="form-control" name="swimming_description" placeholder="...">
                         </div>
                     </div>
 
@@ -66,18 +66,18 @@
                         </div>
                         <div class="mb-3">
                             <label for="running_distance" class="form-label">Distance [km]</label>
-                            <input id="running_distance" type="number" class="form-control" name="running_distance" min="0" max="1000" step="0.1" value="0" required>
+                            <input id="running_distance" type="number" class="form-control" name="running_distance" min="0" max="1000" step="0.1" placeholder="0" required>
                         </div>
                         <div class="mb-3">
                             <label for="running_time_total" class="form-label" aria-describedby="running_time_total_converted">Time Total [min]</label>
                             <div class="input-group">
-                                <input id="running_time_total" type="number" class="form-control" name="running_time_total" min="0" max="1000" step="1" value="0" required>
+                                <input id="running_time_total" type="number" class="form-control" name="running_time_total" min="0" max="1000" step="1" placeholder="0" required>
                                 <span class="input-group-text" id="running_time_total_converted">0:00</span>
                             </div>
                         </div>
                         <div class="mb-3">
                             <label for="running_description" class="form-label">Description (optional)</label>
-                            <input id="running_description" type="text" class="form-control" name="running_description">
+                            <input id="running_description" type="text" class="form-control" name="running_description" placeholder="...">
                         </div>
                     </div>
 
