add all data table api

--- a/website_project/templates/activity_data.html
+++ b/website_project/templates/activity_data.html
@@ -12,6 +12,7 @@
         <h1>Activity data</h1>
     </div>
 
+
     {# Create margins #}
     <div class="row">
         <div class="col-2"></div>
@@ -19,7 +20,44 @@
         {# Main column (center) #}
         <div class="col-8">
 
+            {# Dropdown menu #}
+            <div class="mb-3">
+                <label for="selectActivity" class="form-label">Select activity:</label><br>
+                <select id="selectActivity" class="form-select" name="activity">
+                    <option disabled selected value="empty"> -- Select Activity -- </option>
+                    {% for data in all_data %}
+                        <option value="{{ data.activity }}">{{ data.activity|title }}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
+
+            {% for data in all_data %}
+                {# Table for each activity #}
+                <table class="hidden table table-striped" id="{{ data.activity }}_table">
+
+                    {# Populate header #}
+                    <thead>
+                        <tr>
+                            {% for column_name in data.columns %}
+                                <th scope="col">{{ column_name }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+
+                    {# Populate body #}
+                    <tbody>
+                        {% for row in data.rows %}
+                            <tr>
+                                {% for value in row %}
+                                    <td>{{ value }}</td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+
+                </table>
+            {% endfor %}
 
         </div>
         <div class="col-2"></div>
@@ -31,55 +69,26 @@
         const hideMeMarker = "hidden";  // Marker making elements disappear
         const activities = [];
 
-        activities.push("swimming");
-        activities.push("running");
-
-        const disableElements = elements => {
-            for (const element of elements) element.disabled = true;
-        };
-        const enableElements = elements => {
-            for (const element of elements) element.disabled = false;
-        };
+        {% for data in all_data %}
+            activities.push("{{ data.activity }}");
+        {% endfor %}
 
         selectActivityForm.addEventListener('change', (event) => {
             const selectedActivity = selectActivityForm.value;
             console.log("Selected activity: " + selectedActivity);
 
             for (const activity of activities) {
-                const activityFormId = `${activity}_form`;
+                const activityFormId = `${activity}_table`;
                 const activityForm = document.getElementById(activityFormId);
 
                 if (activity == selectedActivity) {
                     // Make visible
                     activityForm.classList.remove(hideMeMarker);
-                    enableElements(activityForm.querySelectorAll("input"));
                 } else {
                     // Hide
                     activityForm.classList.add(hideMeMarker);
-                    disableElements(activityForm.querySelectorAll("input"));
                 };
             };
         });
-
-        {# Handle time toal conversion for activities #}
-        const minutesConvert = minutes => {
-            const h = `${Math.floor(minutes/60)}`.padStart(2, "0");
-            const min = `${minutes%60}`.padStart(2, "0");
-            return `${h} h ${min} min`;
-        }
-
-        for (const activity of activities) {
-            // Elements need to meet naming convention in order to work
-            const activityTimeTotalInput = document.getElementById(`${activity}_time_total`);
-            const activityTimeTotalConverted = document.getElementById(`${activity}_time_total_converted`);
-
-            if (! activityTimeTotalConverted) continue;  // Ignore if not exist
-
-            // Set initial value and on-change action
-            activityTimeTotalConverted.innerText = minutesConvert(0);
-            activityTimeTotalInput.addEventListener('change', (event) => {
-                activityTimeTotalConverted.innerText = minutesConvert(activityTimeTotalInput.value);
-            });
-        }
     </script>
 {% endblock %}
