--- a/website_project/templates/base.html
+++ b/website_project/templates/base.html
@@ -20,7 +20,7 @@
 
         .my-main-section {
             display: block;
-            min-height:85vh;
+            min-height:80vh;
         }
 
         .my-footer {
@@ -42,8 +42,8 @@
 
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="{{ url_for('activity_form') }}" class="nav-link" aria-current="page">Add activity</a></li>
+                    <li class="nav-item"><a href="{{ url_for('activity_data') }}" class="nav-link" aria-current="page">Data</a></li>
                     <li class="nav-item"><a href="{{ url_for('home_page') }}" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                 </ul>
             </header>
 
