--- a/website_project/templates/activity_data.html
+++ b/website_project/templates/activity_data.html
@@ -8,10 +8,7 @@
 
 {% block body %}
 
-    <div class="text-center">
-        <h1>Activity data</h1>
-    </div>
-
+    {# <div class="text-center"><h1>Activity data</h1> #}
 
     {# Create margins #}
     <div class="row">
@@ -19,11 +16,11 @@
 
         {# Main column (center) #}
         <div class="col-8">
-
+            <legend>See activity data</legend>
             {# Dropdown menu #}
             <div class="mb-3">
-                <label for="selectActivity" class="form-label">Select activity:</label><br>
-                <select id="selectActivity" class="form-select" name="activity">
+                {# <label for="selectActivity" class="form-label">Select activity:</label><br> #}
+                <select id="selectActivity" class="form-select border-secondary" name="activity">
                     <option disabled selected value="empty"> -- Select Activity -- </option>
                     {% for data in all_data %}
                         <option value="{{ data.activity }}">{{ data.activity|title }}</option>
@@ -34,29 +31,31 @@
 
             {% for data in all_data %}
                 {# Table for each activity #}
-                <table class="hidden table table-striped" id="{{ data.activity }}_table">
-
-                    {# Populate header #}
-                    <thead>
-                        <tr>
-                            {% for column_name in data.columns %}
-                                <th scope="col">{{ column_name }}</th>
-                            {% endfor %}
-                        </tr>
-                    </thead>
-
-                    {# Populate body #}
-                    <tbody>
-                        {% for row in data.rows %}
+                <div class="table-responsive">
+                    <table class="hidden table table-striped table-bordered border-secondary table-sm align-middle caption-top" id="{{ data.activity }}_table">
+                        <caption>{{ data.activity|title }} data</caption>
+                        {# Populate header #}
+                        <thead>
                             <tr>
-                                {% for value in row %}
-                                    <td>{{ value }}</td>
+                                {% for column_name in data.columns %}
+                                    <th class="bs-success-text-emphasis" scope="col">{{ column_name }}</th>
                                 {% endfor %}
                             </tr>
-                        {% endfor %}
-                    </tbody>
+                        </thead>
 
-                </table>
+                        {# Populate body #}
+                        <tbody class="table-group-divider">
+                            {% for row in data.rows %}
+                                <tr>
+                                    {% for value in row %}
+                                        <td>{{ value }}</td>
+                                    {% endfor %}
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+
+                    </table>
+                </div>
             {% endfor %}
 
         </div>
