--- a/website_project/templates/base.html
+++ b/website_project/templates/base.html
@@ -27,6 +27,10 @@
             height: 10vh;
         }
 
+        .btn-dark {
+            text-decoration: underline!important;
+        }
+
     </style>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -35,15 +39,15 @@
     <div class="my-main-section">
         {# Navbar #}
         <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom border-success">
                 <a href="{{ url_for('home_page') }}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <span class="fs-4">Website-Project</span>
                 </a>
 
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="{{ url_for('activity_form') }}" class="nav-link" aria-current="page">Add activity</a></li>
-                    <li class="nav-item"><a href="{{ url_for('activity_data') }}" class="nav-link" aria-current="page">Data</a></li>
-                    <li class="nav-item"><a href="{{ url_for('home_page') }}" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="{{ url_for('activity_form') }}" class="btn btn-outline-light text-body-secondary" aria-current="page">Add activity</a></li>
+                    <li class="nav-item"><a href="{{ url_for('activity_data') }}" class="btn btn-dark text-body-secondary" aria-current="page">Data</a></li>
+                    <li class="nav-item"><a href="{{ url_for('home_page') }}" class="btn btn-dark text-body-secondary">Home</a></li>
                 </ul>
             </header>
 
@@ -56,7 +60,7 @@
     <div class="my-footer">
         {# Footer #}
         <div class="container">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-success">
                 <div class="col-md-4 d-flex align-items-center">
                     <span class="mb-3 mb-md-0 text-body-secondary">2023 Patryk Jacek Laskowski</span>
                 </div>
