--- a/website_project/templates/activity_form.html
+++ b/website_project/templates/activity_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_with_margin.html" %}
 
 {% block style %}
     .hidden {
@@ -6,7 +6,7 @@
     }
 {% endblock %}
 
-{% block body %}
+{% block middle_column %}
 
     {# <div class="text-center"><h1>Activity form</h1></div> #}
 
@@ -91,6 +91,9 @@
         <div class="col-2"></div>
     </div>
 
+{% endblock %}
+
+{% block script %}
     <script>
         {# Dropdown activity list #}
         const selectActivityForm = document.getElementById("selectActivity");
