--- a/website_project/templates/base.html
+++ b/website_project/templates/base.html
@@ -58,12 +58,16 @@
             {# Alert #}
             {% if alert %}
                 <div class="alert alert-{{ alert.type }}" role="alert">
-                    {{ alert.msg }}
+                    {{ alert.msg | safe }}
                 </div>
             {% endif %}
 
             {# Body #}
             {% block body %}
+            {% endblock %}
+
+            {# Script #}
+            {% block script %}
             {% endblock %}
         </div>
     </div>
@@ -74,6 +78,13 @@
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-success">
                 <div class="col-md-4 d-flex align-items-center">
                     <span class="mb-3 mb-md-0 text-body-secondary">2023 Patryk Jacek Laskowski</span>
+                </div>
+                <div class="d-flex align-items-left">
+                    {% if current_user.is_authenticated %}
+                        <span class="mb-3 mb-md-0 text-body-secondary">@{{ current_user.username }}</span>
+                    {% else %}
+                        <span class="mb-3 mb-md-0 text-body-secondary">@unauthorized</span>
+                    {% endif %}
                 </div>
 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
