--- a/website_project/templates/signup.html
+++ b/website_project/templates/signup.html
@@ -1,30 +1,25 @@
-{% extends "base.html" %}
+{% extends "base_with_margin.html" %}
 
-{% block body %}
-<div class="column is-4 is-offset-4">
-    <h3 class="title">Sign Up</h3>
-    <div class="box">
-        <form method="POST" action="/signup">
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+{% block middle_column %}
+    <form method="post" action="{{ url_for('signup') }}">
+            <fieldset>
+
+                <legend>Register new:</legend>
+
+                <div>
+                    <div class="mb-3">
+                        <input class="form-control" type="text" name="username" placeholder="Username" autofocus="" required>
+                    </div>
+                    <div class="mb-3">
+                        <input class="form-control" type="password" name="password" placeholder="Password" required>
+                    </div>
                 </div>
-            </div>
 
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
+                {# Submit #}
+                <div class="mb-3 d-grid gap-2">
+                    <input type="submit" class="btn btn-success" value="Submit">
                 </div>
-            </div>
 
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
-                </div>
-            </div>
-
-            <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+            </fieldset>
         </form>
-    </div>
-</div>
 {% endblock %}
