--- a/website_project/templates/profile.html
+++ b/website_project/templates/profile.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% extends "base_with_margin.html" %}
 
-{% block body %}
-<h1 class="title">
-  Welcome, {{ name }}!
-</h1>
+{% block middle_column %}
+
+    <div class="text-center">
+        <h1>Welcome, {{ name }}!</h1>
+    </div>
+
 {% endblock %}
