make auth a blueprint

--- a/website_project/templates/login.html
+++ b/website_project/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base_with_margin.html" %}
 
 {% block middle_column %}
-    <form method="post" action="{{ url_for('login') }}">
+    <form method="post" action="{{ url_for('auth.login') }}">
             <fieldset>
 
                 <legend>Login:</legend>
