move templates to auth blueprint

--- a/website_project/templates/base.html
+++ b/website_project/templates/base.html
@@ -51,7 +51,7 @@
                     <li class="nav-item"><a href="{{ url_for('auth.login') }}" class="btn btn-dark text-body-secondary">Login</a></li>
                     <li class="nav-item"><a href="{{ url_for('auth.signup') }}" class="btn btn-dark text-body-secondary">New Account</a></li>
                     <li class="nav-item"><a href="{{ url_for('auth.logout') }}" class="btn btn-dark text-body-secondary">Logout</a></li>
-                    <li class="nav-item"><a href="{{ url_for('profile') }}" class="btn btn-dark text-body-secondary">Profile</a></li>
+                    <li class="nav-item"><a href="{{ url_for('auth.profile') }}" class="btn btn-dark text-body-secondary">Profile</a></li>
                 </ul>
             </header>
 
