use blueprints to structure project (#28)
* move Cookie to common

* make auth a blueprint

* move templates to auth blueprint

* create base blueprint

* create app for test purposes

---------

Co-authored-by: laskowp1 <patryk.laskowski@contractors.roche.com>

--- a/website_project/templates/base.html
+++ b/website_project/templates/base.html
@@ -40,18 +40,18 @@
         {# Navbar #}
         <div class="container">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom border-success">
-                <a href="{{ url_for('home_page') }}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <a href="{{ url_for('base.home_page') }}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <span class="fs-4">Website-Project</span>
                 </a>
 
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="{{ url_for('activity_form') }}" class="btn btn-outline-light text-body-secondary" aria-current="page">Add activity</a></li>
-                    <li class="nav-item"><a href="{{ url_for('activity_data') }}" class="btn btn-dark text-body-secondary" aria-current="page">Data</a></li>
-                    <li class="nav-item"><a href="{{ url_for('home_page') }}" class="btn btn-dark text-body-secondary">Home</a></li>
-                    <li class="nav-item"><a href="{{ url_for('login') }}" class="btn btn-dark text-body-secondary">Login</a></li>
-                    <li class="nav-item"><a href="{{ url_for('signup') }}" class="btn btn-dark text-body-secondary">New Account</a></li>
-                    <li class="nav-item"><a href="{{ url_for('logout') }}" class="btn btn-dark text-body-secondary">Logout</a></li>
-                    <li class="nav-item"><a href="{{ url_for('profile') }}" class="btn btn-dark text-body-secondary">Profile</a></li>
+                    <li class="nav-item"><a href="{{ url_for('form.activity_form') }}" class="btn btn-outline-light text-body-secondary" aria-current="page">Add activity</a></li>
+                    <li class="nav-item"><a href="{{ url_for('form.activity_data') }}" class="btn btn-dark text-body-secondary" aria-current="page">Data</a></li>
+                    <li class="nav-item"><a href="{{ url_for('base.home_page') }}" class="btn btn-dark text-body-secondary">Home</a></li>
+                    <li class="nav-item"><a href="{{ url_for('auth.login') }}" class="btn btn-dark text-body-secondary">Login</a></li>
+                    <li class="nav-item"><a href="{{ url_for('auth.signup') }}" class="btn btn-dark text-body-secondary">New Account</a></li>
+                    <li class="nav-item"><a href="{{ url_for('auth.logout') }}" class="btn btn-dark text-body-secondary">Logout</a></li>
+                    <li class="nav-item"><a href="{{ url_for('auth.profile') }}" class="btn btn-dark text-body-secondary">Profile</a></li>
                 </ul>
             </header>
 
