--- a/website_project/blueprints/auth/templates/signup.html
+++ b/website_project/blueprints/auth/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base_with_margin.html" %}
 
 {% block middle_column %}
-    <form method="post" action="{{ url_for('signup') }}">
+    <form method="post" action="{{ url_for('auth.signup') }}">
             <fieldset>
 
                 <legend>Register new:</legend>
